--- a/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -181,111 +181,67 @@
 			Name="src"
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			>
+<File RelativePath="..\..\src\Archive.cpp"></File>
+<File RelativePath="..\..\src\Audio.cpp"></File>
 <File RelativePath="..\..\src\CommandLineOptions.cpp"></File>
+<File RelativePath="..\..\src\ConfigFile.cpp"></File>
 <File RelativePath="..\..\src\ErrorCodes.cpp"></File>
 <File RelativePath="..\..\src\Everything.cpp"></File>
+<File RelativePath="..\..\src\ExpressionParser.tab.cpp"></File>
+<File RelativePath="..\..\src\FileLog.cpp"></File>
 <File RelativePath="..\..\src\Functions.cpp"></File>
+<File RelativePath="..\..\src\GFX.cpp"></File>
+<File RelativePath="..\..\src\GUI.cpp"></File>
+<File RelativePath="..\..\src\INIParser.tab.cpp"></File>
+<File RelativePath="..\..\src\INIfile.cpp"></File>
+<File RelativePath="..\..\src\IOFunctions.cpp"></File>
+<File RelativePath="..\..\src\ImageLoader.cpp"></File>
+<File RelativePath="..\..\src\MacroParser.cpp"></File>
+<File RelativePath="..\..\src\MacroParser.tab.cpp"></File>
 <File RelativePath="..\..\src\ONSlaught.cpp"></File>
+<File RelativePath="..\..\src\SDL_bilinear.c"></File>
+<File RelativePath="..\..\src\SDL_ttf.c"></File>
 <File RelativePath="..\..\src\SJIS.table.cpp"></File>
+<File RelativePath="..\..\src\SaveFile.cpp"></File>
+<File RelativePath="..\..\src\ScreenSpace.cpp"></File>
+<File RelativePath="..\..\src\Script.cpp"></File>
+<File RelativePath="..\..\src\ScriptInterpreter.cpp"></File>
 <File RelativePath="..\..\src\ThreadManager.cpp"></File>
+<File RelativePath="..\..\src\VariableStore.cpp"></File>
+<File RelativePath="..\..\src\VirtualScreen.cpp"></File>
+<File RelativePath="..\..\src\commandPreParser.tab.cpp"></File>
+<File RelativePath="..\..\src\sha1.cpp"></File>
+<File RelativePath="..\..\src\Archive.h"></File>
+<File RelativePath="..\..\src\Audio.h"></File>
 <File RelativePath="..\..\src\CommandLineOptions.h"></File>
 <File RelativePath="..\..\src\Common.h"></File>
+<File RelativePath="..\..\src\ConfigFile.h"></File>
 <File RelativePath="..\..\src\ErrorCodes.h"></File>
 <File RelativePath="..\..\src\Everything.h"></File>
+<File RelativePath="..\..\src\ExpressionParser.tab.hpp"></File>
+<File RelativePath="..\..\src\FileLog.h"></File>
 <File RelativePath="..\..\src\Functions.h"></File>
+<File RelativePath="..\..\src\GFX.h"></File>
+<File RelativePath="..\..\src\GUI.h"></File>
+<File RelativePath="..\..\src\INIParser.tab.hpp"></File>
+<File RelativePath="..\..\src\INIfile.h"></File>
+<File RelativePath="..\..\src\IOFunctions.h"></File>
+<File RelativePath="..\..\src\ImageLoader.h"></File>
+<File RelativePath="..\..\src\MacroParser.h"></File>
+<File RelativePath="..\..\src\MacroParser.tab.hpp"></File>
+<File RelativePath="..\..\src\SDL_bilinear.h"></File>
+<File RelativePath="..\..\src\SDL_ttf.h"></File>
+<File RelativePath="..\..\src\SaveFile.h"></File>
+<File RelativePath="..\..\src\ScreenSpace.h"></File>
+<File RelativePath="..\..\src\Script.h"></File>
+<File RelativePath="..\..\src\ScriptInterpreter.h"></File>
 <File RelativePath="..\..\src\ThreadManager.h"></File>
+<File RelativePath="..\..\src\VariableStore.h"></File>
+<File RelativePath="..\..\src\VirtualScreen.h"></File>
+<File RelativePath="..\..\src\commandPreParser.tab.hpp"></File>
 <File RelativePath="..\..\src\enums.h"></File>
+<File RelativePath="..\..\src\sha1.h"></File>
 <File RelativePath="..\..\src\version.h"></File>
-			<Filter
-				Name="IO_System"
-				>
-<File RelativePath="..\..\src\IO_System\ConfigFile.cpp"></File>
-<File RelativePath="..\..\src\IO_System\INIParser.tab.cpp"></File>
-<File RelativePath="..\..\src\IO_System\INIfile.cpp"></File>
-<File RelativePath="..\..\src\IO_System\IOFunctions.cpp"></File>
-<File RelativePath="..\..\src\IO_System\SaveFile.cpp"></File>
-<File RelativePath="..\..\src\IO_System\ConfigFile.h"></File>
-<File RelativePath="..\..\src\IO_System\INIParser.tab.hpp"></File>
-<File RelativePath="..\..\src\IO_System\INIfile.h"></File>
-<File RelativePath="..\..\src\IO_System\IOFunctions.h"></File>
-<File RelativePath="..\..\src\IO_System\SaveFile.h"></File>
-				<Filter
-					Name="Audio"
-					>
-<File RelativePath="..\..\src\IO_System\Audio\Audio.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Audio\Audio.h"></File>
-				</Filter>
-				<Filter
-					Name="Graphics"
-					>
-<File RelativePath="..\..\src\IO_System\Graphics\Button.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Cursor.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\FontCache.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\GFX.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Layer.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Lookback.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Menu.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.c"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.c"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\StandardOutput.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Button.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Cursor.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\FontCache.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\GFX.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Layer.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Lookback.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\Menu.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\StandardOutput.h"></File>
-<File RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.h"></File>
-				</Filter>
-				<Filter
-					Name="SAR"
-					>
-<File RelativePath="..\..\src\IO_System\SAR\Archive.cpp"></File>
-<File RelativePath="..\..\src\IO_System\SAR\FileLog.cpp"></File>
-<File RelativePath="..\..\src\IO_System\SAR\Image.cpp"></File>
-<File RelativePath="..\..\src\IO_System\SAR\ImageLoader.cpp"></File>
-<File RelativePath="..\..\src\IO_System\SAR\Archive.h"></File>
-<File RelativePath="..\..\src\IO_System\SAR\FileLog.h"></File>
-<File RelativePath="..\..\src\IO_System\SAR\Image.h"></File>
-<File RelativePath="..\..\src\IO_System\SAR\ImageLoader.h"></File>
-				</Filter>
-				<Filter
-					Name="Script"
-					>
-<File RelativePath="..\..\src\IO_System\Script\MacroParser.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\MacroParser.tab.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\Script.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\sha1.cpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\MacroParser.h"></File>
-<File RelativePath="..\..\src\IO_System\Script\MacroParser.tab.hpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\Script.h"></File>
-<File RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.hpp"></File>
-<File RelativePath="..\..\src\IO_System\Script\sha1.h"></File>
-				</Filter>
-			</Filter>
-			<Filter
-				Name="Processing"
-				>
-<File RelativePath="..\..\src\Processing\ExpressionParser.tab.cpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter.cpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsAI.cpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsJR.cpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsSZ.cpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter_savegame.cpp"></File>
-<File RelativePath="..\..\src\Processing\VariableStore.cpp"></File>
-<File RelativePath="..\..\src\Processing\ExpressionParser.tab.hpp"></File>
-<File RelativePath="..\..\src\Processing\ScriptInterpreter.h"></File>
-<File RelativePath="..\..\src\Processing\VariableStore.h"></File>
-			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\onslaught.rc"
