--- a/trunk/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/trunk/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -195,6 +195,7 @@
 <File RelativePath="..\..\src\INIfile.cpp"></File>
 <File RelativePath="..\..\src\IOFunctions.cpp"></File>
 <File RelativePath="..\..\src\ImageLoader.cpp"></File>
+<File RelativePath="..\..\src\LZMA.c"></File>
 <File RelativePath="..\..\src\MacroParser.cpp"></File>
 <File RelativePath="..\..\src\MacroParser.tab.cpp"></File>
 <File RelativePath="..\..\src\ONSlaught.cpp"></File>
@@ -209,6 +210,7 @@
 <File RelativePath="..\..\src\VariableStore.cpp"></File>
 <File RelativePath="..\..\src\VirtualScreen.cpp"></File>
 <File RelativePath="..\..\src\commandPreParser.tab.cpp"></File>
+<File RelativePath="..\..\src\puff.c"></File>
 <File RelativePath="..\..\src\sha1.cpp"></File>
 <File RelativePath="..\..\src\Archive.h"></File>
 <File RelativePath="..\..\src\Audio.h"></File>
@@ -225,6 +227,7 @@
 <File RelativePath="..\..\src\INIfile.h"></File>
 <File RelativePath="..\..\src\IOFunctions.h"></File>
 <File RelativePath="..\..\src\ImageLoader.h"></File>
+<File RelativePath="..\..\src\LZMA.h"></File>
 <File RelativePath="..\..\src\MacroParser.h"></File>
 <File RelativePath="..\..\src\MacroParser.tab.hpp"></File>
 <File RelativePath="..\..\src\SDL_bilinear.h"></File>
@@ -238,6 +241,7 @@
 <File RelativePath="..\..\src\VirtualScreen.h"></File>
 <File RelativePath="..\..\src\commandPreParser.tab.hpp"></File>
 <File RelativePath="..\..\src\enums.h"></File>
+<File RelativePath="..\..\src\puff.h"></File>
 <File RelativePath="..\..\src\sha1.h"></File>
 <File RelativePath="..\..\src\version.h"></File>
 <File RelativePath="..\..\src\Plugin\LibraryLoader.cpp"></File>
