--- a/trunk/CodeBlocks-win32/ONSlaught.cbp
+++ b/trunk/CodeBlocks-win32/ONSlaught.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="..\bin-win32\ONSlaught-win32-MinGW" prefix_auto="1" extension_auto="1" />
+				<Option output="..\bin-win32\ONSlaught" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\bin-win32" />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
@@ -19,7 +19,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Debug.lib">
-				<Option output="..\bin-win32\ONSlaught_d-win32-MinGW" prefix_auto="1" extension_auto="1" />
+				<Option output="..\bin-win32\ONSlaught_d" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\bin-win32" />
 				<Option object_output="obj\Debug\" />
 				<Option type="3" />
@@ -32,7 +32,7 @@
 				</Compiler>
 			</Target>
 			<Target title="SVN">
-				<Option output="..\bin-win32\ONSlaught-win32-MinGW" prefix_auto="1" extension_auto="1" />
+				<Option output="..\bin-win32\ONSlaught" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\bin-win32" />
 				<Option object_output="obj\SVN\" />
 				<Option type="1" />
@@ -48,7 +48,7 @@
 				</Linker>
 			</Target>
 			<Target title="SVN.lib">
-				<Option output="..\bin-win32\ONSlaught-win32-MinGW" prefix_auto="1" extension_auto="1" />
+				<Option output="..\bin-win32\ONSlaught" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\bin-win32" />
 				<Option object_output="obj\SVN\" />
 				<Option type="3" />
@@ -69,18 +69,27 @@
 			<Add option="-Wmain" />
 			<Add option="-pedantic" />
 			<Add option="-DUNICODE" />
-			<Add option="-D_UNICODE" />
 			<Add directory="..\include" />
 		</Compiler>
 		<Linker>
-			<Add library="SDL.dll" />
 			<Add library="mingw32" />
-			<Add library="SDLmain" />
-			<Add library="SDL_image.dll" />
-			<Add library="SDL_mixer.dll" />
-			<Add library="bz2" />
-			<Add library="freetype.dll" />
+			<Add library="SDL_mixer" />
+			<Add library="SDL_image" />
+			<Add library="smpeg" />
+			<Add library="timidity" />
 			<Add library="SDL" />
+			<Add library="bz2" />
+			<Add library="freetype" />
+			<Add library="jpeg" />
+			<Add library="mikmod" />
+			<Add library="native_midi" />
+			<Add library="winmm" />
+			<Add library="vorbisfile" />
+			<Add library="vorbis" />
+			<Add library="ogg" />
+			<Add library="png" />
+			<Add library="tiff" />
+			<Add library="z" />
 			<Add directory="..\lib-win32" />
 		</Linker>
 		<Unit filename="..\onslaught.rc" />
