--- a/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -61,10 +61,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="freetype.lib libbz2.lib SDL.lib SDL_image.lib SDL_mixer.lib"
-				OutputFile="$(OutDir)/ONSlaught_d-win32-VC++.exe"
+				AdditionalDependencies="freetype.lib jpeg.lib libbz2.lib libmikmod.lib libogg.lib libpng.lib libtiff.lib libvorbis.lib libvorbisfile.lib native_midi.lib SDL.lib SDL_image_d.lib SDL_mixer.lib SDLmain.lib smpeg.lib timidity.lib zlib.lib winmm.lib"
+				OutputFile="$(OutDir)/ONSlaught_d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../../lib-win32"
+				AdditionalLibraryDirectories="../../lib-win32/MSVC"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -139,10 +139,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="freetype.lib libbz2.lib SDL.lib SDL_image.lib SDL_mixer.lib"
+				AdditionalDependencies="freetype.lib jpeg.lib libbz2.lib libmikmod.lib libogg.lib libpng.lib libtiff.lib libvorbis.lib libvorbisfile.lib native_midi.lib SDL.lib SDL_image_d.lib SDL_mixer.lib SDLmain.lib smpeg.lib timidity.lib zlib.lib winmm.lib"
 				OutputFile="$(OutDir)/ONSlaught-win32-VC++.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="../../lib-win32"
+				AdditionalLibraryDirectories="../../lib-win32/MSVC"
 				GenerateManifest="false"
 				GenerateDebugInformation="false"
 				SubSystem="1"
