--- a/VisualC++/Plugin/Plugin.vcproj
+++ b/VisualC++/Plugin/Plugin.vcproj
@@ -61,10 +61,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib ONSlaught_d-win32-VC++.lib"
+				AdditionalDependencies="SDL.lib ONSlaught_d.lib"
 				OutputFile="$(OutDir)\plugin_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;../../lib-win32&quot;;&quot;../../bin-win32&quot;"
+				AdditionalLibraryDirectories="&quot;../../lib-win32/MSVC&quot;;&quot;../../bin-win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -137,10 +137,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib ONSlaught-win32-VC++.lib"
+				AdditionalDependencies="SDL.lib ONSlaught.lib"
 				OutputFile="$(OutDir)\plugin.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;../../lib-win32&quot;;&quot;../../bin-win32&quot;"
+				AdditionalLibraryDirectories="&quot;../../lib-win32/MSVC&quot;;&quot;../../bin-win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
