--- a/video_player/video_player.cbp
+++ b/video_player/video_player.cbp
@@ -2,13 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Plugin" />
+		<Option title="video_player" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="..\bin-win32\plugin_d" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin-win32\video_player" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj-win32\Debug\" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-g" />
+					<Add option="-DBUILD_DLL" />
+				</Compiler>
+			</Target>
+			<Target title="Release">
+				<Option output="bin-win32\video_player" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Release\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -16,47 +29,31 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-DBUILD_DLL" />
-					<Add option="-g" />
-				</Compiler>
-				<Linker>
-					<Add library="user32" />
-					<Add library="ONSlaught_d" />
-				</Linker>
-			</Target>
-			<Target title="SVN">
-				<Option output="..\bin-win32\plugin" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\SVN\" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-O3" />
-					<Add option="-DBUILD_DLL" />
-					<Add option="-DNONS_SVN" />
+					<Add option="-O2" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 					<Add library="user32" />
-					<Add library="ONSlaught" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wmain" />
-			<Add option="-pedantic" />
-			<Add option="-DUNICODE" />
-			<Add option="-D_UNICODE" />
 			<Add directory="..\include" />
+			<Add directory="include" />
 		</Compiler>
 		<Linker>
+			<Add option="-static-libgcc" />
+			<Add library="user32" />
+			<Add library="avformat" />
+			<Add library="avcodec" />
+			<Add library="avutil" />
 			<Add library="SDL" />
 			<Add library="winmm" />
+			<Add library="OpenAL32" />
 			<Add directory="..\lib-win32\MinGW" />
-			<Add directory="..\bin-win32" />
+			<Add directory="lib-win32" />
 		</Linker>
-		<Unit filename="..\src\Plugin\Plugin.cpp" />
-		<Unit filename="..\src\Plugin\Plugin.h" />
+		<Unit filename="video_player.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
