--- a/tools/src/VisualC++/zip/zip.vcproj
+++ b/tools/src/VisualC++/zip/zip.vcproj
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="../../include"
 				FavorSizeOrSpeed="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
@@ -63,6 +64,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libbz2.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="../../lib-win32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,6 +119,7 @@
 				Optimization="3"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
+				AdditionalIncludeDirectories="../../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -137,6 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libbz2.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="../../lib-win32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
