--- a/trunk/tools/src/VisualC++/nsaio/nsaio.vcproj
+++ b/trunk/tools/src/VisualC++/nsaio/nsaio.vcproj
@@ -42,7 +42,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;TOOLS_NSAIO"
+				FavorSizeOrSpeed="0"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
