* Added internal support for font outlines.     TODO: Implement user-level interface and save mechanism. * Discontinued UCS-2 support. * Implemented reduced memory consumption builds for low memory     environments. Note: Macros are disabled in this state.

--- a/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -49,6 +49,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4065;4530;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -126,6 +127,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="0"
+				DisableSpecificWarnings="4065;4530;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
