--- a/trunk/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/trunk/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -49,6 +49,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4065;4530;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -126,6 +127,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="0"
+				DisableSpecificWarnings="4065;4530;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
