--- a/trunk/CodeBlocks-win32/ONSlaught.cbp
+++ b/trunk/CodeBlocks-win32/ONSlaught.cbp
@@ -16,6 +16,7 @@
 					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
+					<Add option="-D_CONSOLE" />
 				</Compiler>
 			</Target>
 			<Target title="Debug.lib">
@@ -29,13 +30,14 @@
 					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
+					<Add option="-D_CONSOLE" />
 				</Compiler>
 			</Target>
 			<Target title="SVN">
 				<Option output="..\bin-win32\ONSlaught" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\bin-win32" />
 				<Option object_output="obj\SVN\" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-fexpensive-optimizations" />
@@ -93,7 +95,9 @@
 			<Add library="z" />
 			<Add directory="..\lib-win32\MinGW" />
 		</Linker>
-		<Unit filename="..\onslaught.rc" />
+		<Unit filename="..\onslaught.rc">
+			<Option compilerVar="WINDRES" />
+		</Unit>
 		<Unit filename="..\src\Archive.cpp" />
 		<Unit filename="..\src\Archive.h" />
 		<Unit filename="..\src\Audio.cpp" />
@@ -103,7 +107,6 @@
 		<Unit filename="..\src\Common.h" />
 		<Unit filename="..\src\ConfigFile.cpp" />
 		<Unit filename="..\src\ConfigFile.h" />
-		<Unit filename="..\src\enums.h" />
 		<Unit filename="..\src\ErrorCodes.cpp" />
 		<Unit filename="..\src\ErrorCodes.h" />
 		<Unit filename="..\src\ExpressionParser.tab.cpp" />
@@ -116,14 +119,14 @@
 		<Unit filename="..\src\GFX.h" />
 		<Unit filename="..\src\GUI.cpp" />
 		<Unit filename="..\src\GUI.h" />
-		<Unit filename="..\src\ImageLoader.cpp" />
-		<Unit filename="..\src\ImageLoader.h" />
-		<Unit filename="..\src\INIfile.cpp" />
-		<Unit filename="..\src\INIfile.h" />
 		<Unit filename="..\src\INIParser.tab.cpp" />
 		<Unit filename="..\src\INIParser.tab.hpp" />
+		<Unit filename="..\src\INIfile.cpp" />
+		<Unit filename="..\src\INIfile.h" />
 		<Unit filename="..\src\IOFunctions.cpp" />
 		<Unit filename="..\src\IOFunctions.h" />
+		<Unit filename="..\src\ImageLoader.cpp" />
+		<Unit filename="..\src\ImageLoader.h" />
 		<Unit filename="..\src\LZMA.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -135,10 +138,11 @@
 		<Unit filename="..\src\ONSlaught.cpp" />
 		<Unit filename="..\src\Plugin\LibraryLoader.cpp" />
 		<Unit filename="..\src\Plugin\LibraryLoader.h" />
-		<Unit filename="..\src\puff.c">
+		<Unit filename="..\src\SDL_bilinear.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\src\puff.h" />
+		<Unit filename="..\src\SDL_bilinear.h" />
+		<Unit filename="..\src\SJIS.table.cpp" />
 		<Unit filename="..\src\SaveFile.cpp" />
 		<Unit filename="..\src\SaveFile.h" />
 		<Unit filename="..\src\ScreenSpace.cpp" />
@@ -147,22 +151,20 @@
 		<Unit filename="..\src\Script.h" />
 		<Unit filename="..\src\ScriptInterpreter.cpp" />
 		<Unit filename="..\src\ScriptInterpreter.h" />
-		<Unit filename="..\src\SDL_bilinear.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="..\src\SDL_bilinear.h" />
-		<Unit filename="..\src\sha1.cpp" />
-		<Unit filename="..\src\sha1.h" />
-		<Unit filename="..\src\SJIS.table.cpp" />
 		<Unit filename="..\src\ThreadManager.cpp" />
 		<Unit filename="..\src\ThreadManager.h" />
 		<Unit filename="..\src\VariableStore.cpp" />
 		<Unit filename="..\src\VariableStore.h" />
-		<Unit filename="..\src\version.h" />
 		<Unit filename="..\src\VirtualScreen.cpp" />
 		<Unit filename="..\src\VirtualScreen.h" />
-
-
+		<Unit filename="..\src\enums.h" />
+		<Unit filename="..\src\puff.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="..\src\puff.h" />
+		<Unit filename="..\src\sha1.cpp" />
+		<Unit filename="..\src\sha1.h" />
+		<Unit filename="..\src\version.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
