--- a/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -42,8 +42,9 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;DEBUG_SCREEN_MUTEX"
 				MinimalRebuild="true"
+				ExceptionHandling="1"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
@@ -67,7 +68,7 @@
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../lib-win32/MSVC"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -121,7 +122,8 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NONS_SVN"
+				PreprocessorDefinitions="WIN32;NDEBUG;NONS_SVN"
+				ExceptionHandling="1"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -147,7 +149,7 @@
 				AdditionalLibraryDirectories="../../lib-win32/MSVC"
 				GenerateManifest="false"
 				GenerateDebugInformation="false"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				DataExecutionPrevention="1"
